# VTuber-Fortune-Teller

./: .gitignore  CEREBRAS_IMPLEMENTATION_SUMMARY.md  README.md  frontend_integration_test.md  package-lock.json  package.json
analyze/: backend-structure-analysis.md  frontend-structure-analysis.md
backend/: .env.example  CEREBRAS_DEPLOYMENT_GUIDE.md  PHASE_8.1_IMPLEMENTATION_SUMMARY.md  alembic.ini  fortune_vtuber.db-shm  fortune_vtuber.db-wal  package-lock.json  package.json  pyproject.toml  requirements-tts.txt  run_server.py  test_cerebras_ai.py  test_cerebras_integration.py  test_cerebras_quick.py  test_complete_flow.py  test_complete_integration.py  test_complete_pipeline.py  test_database.py  test_frontend_integration.py  test_live2d_integration.py  test_logging_fixes.py  test_manual_verification.py  test_simple_tts.py  test_tts_implementation.py  test_tts_integration.py  test_websocket_chat.py  test_websocket_tts.py
backend/.claude/agents/: live2d-backend-expert.md  live2d-frontend-specialist.md
backend/alembic/: script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  20250822_2039_71a95b2551bd_add_is_active_to_chatsession.py  20250822_2156_354b390f94e2_add_user_session_preferences_and_.py
backend/docs/: api-design.md  security-architecture.md
backend/src/fortune_vtuber/: main.py
backend/src/fortune_vtuber/api/: chat.py  fortune.py  live2d.py  live2d_motion.py  performance.py  router.py  test_simple.py  tts.py  tts_settings.py  user.py
backend/src/fortune_vtuber/audio/: audio_enhancer.py  lipsync_analyzer.py
backend/src/fortune_vtuber/config/: __init__.py  cerebras_config.py  database.py  settings.py
backend/src/fortune_vtuber/core/: async_optimizer.py  integration_test.py  memory_manager.py  websocket_optimizer.py
backend/src/fortune_vtuber/docs/: api_documentation.md
backend/src/fortune_vtuber/fortune/: cerebras_engine.py  engines.py
backend/src/fortune_vtuber/live2d/: emotion_bridge.py  emotion_engine.js  emotion_mapping.py  model_config.js  model_manager.js  tts_integration.py
backend/src/fortune_vtuber/models/: __init__.py  cache.py  chat.py  fortune.py  system.py  user.py
backend/src/fortune_vtuber/repositories/: __init__.py  base.py  cache.py  fortune.py  live2d.py  system.py  user.py
backend/src/fortune_vtuber/security/: content_filter.py  middleware.py  validation.py
backend/src/fortune_vtuber/services/: chat_service.py  chat_service.py.backup  database_service.py  fortune_service.py  live2d_service.py  user_service.py
backend/src/fortune_vtuber/tests/: test_tts_live2d_integration.py
backend/src/fortune_vtuber/tts/: README.md  emotion_voice_processor.py  live2d_tts_manager.py  tts_config_manager.py  tts_factory.py  tts_interface.py
backend/src/fortune_vtuber/tts/providers/: __init__.py  edge_tts.py  siliconflow_tts.py
backend/src/fortune_vtuber/utils/: __init__.py  serialization.py
backend/src/fortune_vtuber/websocket/: chat_websocket.py  router.py  tts_live2d_handler.py
backend/static/: asset-manifest.json
backend/static/libs/: live2d-placeholder.js
backend/static/static/css/: main.3260e2af.css  main.3260e2af.css.map  main.555a0821.css
backend/static/static/js/: main.3de116ef.js  main.3de116ef.js.map  main.b8a7b5c5.js  main.b8a7b5c5.js.map  main.f4a739ff.js  main.f4a739ff.js.map
docs/: api-usage-guide.md  testing-guide.md  troubleshooting.md
frontend/: README.md  copy_resources.js  debug_console.py  index.html  package-lock.json  package.json  serve.py  test_screenshot.py  vite.config.mts
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx  index.css  index.tsx  main.ts
idea/: fortune-app-planning.md
instruct/: implement.md  instruct.md
project/: .gitignore  HYBRID_TTS_IMPLEMENTATION_REPORT.md  complete_system_test.js  test_lipsync_fix.js
reference/: CLAUDE.md
todo/: todo.md  todo2.md
(+123 files in other folders)
